[package]
name = "sublinkx-rs-backend"
version = "0.1.1"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
flate2 = "1"
hex = "0.4"
http = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
percent-encoding = "2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "mysql", "sqlite"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "net", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "set-header", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zip = "2"
